Adding photo uploader

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<%= cl_image_tag("ndwdxowdgipsi3z0g7ic", width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
 <h1>Articles</h1>
 
 <table>
